2.2.16 beta (24.11.2016) ============== - Fix "size cropper wrapper"

--- a/assets/components/userfiles/css/mgr/main.css
+++ b/assets/components/userfiles/css/mgr/main.css
@@ -356,26 +356,26 @@ span.userfiles-icon-tsv:before {
 	width: 50px !important; }
 
 .userfiles-cropper-window .userfiles-cropper {
-	margin-left: 0 !important;}
+	margin-left: 0 !important;
+}
 
 
 .image-upload-wrapper {
 	height: 364px;
 	box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.25);
 	background-color: #fcfcfc;
-	overflow: hidden; }
+	overflow: hidden;
+}
 
 .image-upload-wrapper img {
-	display: block;
-	height: auto;
-	max-width: 100%; }
+	max-width: 100%;
+	max-height: 100%;
+}
 
 #userfiles-div-copy {
 	width: 0;
 	height: 0;
 }
-
-
 
 
 div#msg-div {
